lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:17: error: illegal start of simple expression
return Segment(Point(0,0),Point(,0))
                                ^Lander:18: error: ')' expected but '}' found.
}
^